net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/NetworkSecurityGroupTests/NetworkSecurityGroupApiTest[2018-11-01].json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-04b6e63f7bc25eb98f5ee77ea68f8f62-030ffc1b2b2c6e73-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "9b5dbf9981fc155732bd2ab760925421",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:06 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "bc386a02-120a-4107-9a74-52e017fc0059",
        "x-ms-ratelimit-remaining-subscription-reads": "10918",
        "x-ms-request-id": "bc386a02-120a-4107-9a74-52e017fc0059",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153707Z:bc386a02-120a-4107-9a74-52e017fc0059"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg6379?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-544ed33f955c4b8fc05e5046b99dc368-e727943672543767-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "797daf23bf6e7ccde18416e27518251e",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:07 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "c8435d3a-ddfd-4027-b341-60f03ba55024",
        "x-ms-ratelimit-remaining-subscription-writes": "921",
        "x-ms-request-id": "c8435d3a-ddfd-4027-b341-60f03ba55024",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153708Z:c8435d3a-ddfd-4027-b341-60f03ba55024"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379",
        "name": "csmrg6379",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "37",
        "Content-Type": "application/json",
        "traceparent": "00-592c4afe782cd2f9385e84f6f4f95cb1-b33d8ba550efca49-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "b522ff64d3c7fb2ba5a1dc499ae0b049",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/e441ca01-577c-4e0f-be32-ea80b2a159ba?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "6519",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:09 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "1c40cb82-aa64-4516-9d8e-296b0a48acc6",
        "x-ms-client-request-id": "b522ff64d3c7fb2ba5a1dc499ae0b049",
        "x-ms-correlation-request-id": "6f0f7cb2-ded7-4f1f-ac75-cb3c4503bb46",
        "x-ms-ratelimit-remaining-subscription-writes": "920",
        "x-ms-request-id": "e441ca01-577c-4e0f-be32-ea80b2a159ba",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153710Z:6f0f7cb2-ded7-4f1f-ac75-cb3c4503bb46"
      },
      "ResponseBody": {
        "name": "azsmnet7217",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217",
        "etag": "W/\"267986a3-7279-4b29-a740-f1fcab4031ef\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "446c41ce-414d-46b1-b977-8489151da98d",
          "securityRules": [],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"267986a3-7279-4b29-a740-f1fcab4031ef\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"267986a3-7279-4b29-a740-f1fcab4031ef\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"267986a3-7279-4b29-a740-f1fcab4031ef\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"267986a3-7279-4b29-a740-f1fcab4031ef\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"267986a3-7279-4b29-a740-f1fcab4031ef\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"267986a3-7279-4b29-a740-f1fcab4031ef\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/e441ca01-577c-4e0f-be32-ea80b2a159ba?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-592c4afe782cd2f9385e84f6f4f95cb1-08518009cdd7465d-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "552e9f99cefedc5c517dc81df03246a4",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:09 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "47a9805d-4dcc-4ea5-bc46-acb808341e2b",
        "x-ms-client-request-id": "552e9f99cefedc5c517dc81df03246a4",
        "x-ms-correlation-request-id": "207f32f5-69b7-4415-a95f-abb08cab8915",
        "x-ms-ratelimit-remaining-subscription-reads": "10917",
        "x-ms-request-id": "538c4806-7c5f-4129-b176-5234911d3c88",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153710Z:207f32f5-69b7-4415-a95f-abb08cab8915"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-592c4afe782cd2f9385e84f6f4f95cb1-acda893a009e939e-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "435799658b8c38ecfe9296acd7eac9e8",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "6526",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:10 GMT",
        "ETag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "77c7a34b-6e24-45e4-a3e4-b1e950f08f49",
        "x-ms-client-request-id": "435799658b8c38ecfe9296acd7eac9e8",
        "x-ms-correlation-request-id": "96c9c9a1-3ba1-4c64-926d-cc4474f83162",
        "x-ms-ratelimit-remaining-subscription-reads": "10916",
        "x-ms-request-id": "b2dfbcdf-f95f-4900-99ae-bbfb98258b39",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153711Z:96c9c9a1-3ba1-4c64-926d-cc4474f83162"
      },
      "ResponseBody": {
        "name": "azsmnet7217",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217",
        "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "446c41ce-414d-46b1-b977-8489151da98d",
          "securityRules": [],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-baee0fa1d1d0a44ca7c39aa03aabad2f-398ed233dbf6b191-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "fbb0d7fb5bb2504a78bc415663e39fec",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "6526",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:10 GMT",
        "ETag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2adaa673-43e2-46d0-b1cc-3e0d1aaff08d",
        "x-ms-client-request-id": "fbb0d7fb5bb2504a78bc415663e39fec",
        "x-ms-correlation-request-id": "a77a8c42-a2bf-4b43-a851-db06cb350e8e",
        "x-ms-ratelimit-remaining-subscription-reads": "10915",
        "x-ms-request-id": "18a7b905-deb7-4a24-942c-6b4b87b4f8ac",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153711Z:a77a8c42-a2bf-4b43-a851-db06cb350e8e"
      },
      "ResponseBody": {
        "name": "azsmnet7217",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217",
        "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "446c41ce-414d-46b1-b977-8489151da98d",
          "securityRules": [],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-e9daab6b212f451870869341bcf5f0db-1f50964ab2bd9849-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "98db57d361650e78b2f5566b37af0467",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "7135",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:11 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8ee2331e-c52a-4a1c-810b-e3533a66918b",
        "x-ms-client-request-id": "98db57d361650e78b2f5566b37af0467",
        "x-ms-correlation-request-id": "c5dd00ee-5c27-4a73-aa9d-e660adefdb16",
        "x-ms-ratelimit-remaining-subscription-reads": "10914",
        "x-ms-request-id": "212d6cc9-4234-4298-bcf2-32108786aa56",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153712Z:c5dd00ee-5c27-4a73-aa9d-e660adefdb16"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "azsmnet7217",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217",
            "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus",
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "446c41ce-414d-46b1-b977-8489151da98d",
              "securityRules": [],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ]
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/networkSecurityGroups?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-a541ffedb61c667445bfa05c7ab3ad77-44f4ae31d76c6d15-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "1921dfb44b810af24f07cbcf4996d51b",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "51606",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:12 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "48a51959-2a74-4e6a-b783-b3da61441b12",
        "x-ms-original-request-ids": [
          "08862f1d-b028-40b5-a4ff-ac2da800675d",
          "5c4b5c86-6f97-42c4-af1b-d8a119fc78ae",
          "3f96a75f-d42a-47b1-b5bf-6dab79ea606a"
        ],
        "x-ms-ratelimit-remaining-subscription-reads": "10913",
        "x-ms-request-id": "48a51959-2a74-4e6a-b783-b3da61441b12",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153713Z:48a51959-2a74-4e6a-b783-b3da61441b12"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "azsmnet7217",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217",
            "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus",
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "446c41ce-414d-46b1-b977-8489151da98d",
              "securityRules": [],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"b76179c3-da72-4637-8ff9-0dae1e653f0f\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ]
            }
          },
          {
            "name": "NRMS-runnztc2q22ruvnet-1199",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199",
            "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "eastus",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "e6a69935-ad4a-443d-b177-0e6d0bdf2898",
              "securityRules": [],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/virtualNetworks/vnet-1199/subnets/default"
                }
              ]
            }
          },
          {
            "name": "NRMS-77ii2aynewgdavnet-hdi-0809",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809",
            "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "eastus",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "bc057244-e333-4981-aebc-f99f3f7378d6",
              "securityRules": [
                {
                  "name": "NRMS-Rule-106",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-106",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 106,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "22",
                      "3389"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-103",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-103",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetPublic",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 103,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-107",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-107",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 107,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "23",
                      "135",
                      "445",
                      "5985",
                      "5986"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-108",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-108",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 108,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "13",
                      "17",
                      "19",
                      "53",
                      "69",
                      "111",
                      "123",
                      "512",
                      "514",
                      "593",
                      "873",
                      "1900",
                      "5353",
                      "11211"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-101",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-101",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-105",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-105",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 105,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "1433",
                      "1434",
                      "3306",
                      "4333",
                      "5432",
                      "6379",
                      "7000",
                      "7001",
                      "7199",
                      "9042",
                      "9160",
                      "9300",
                      "16379",
                      "26379",
                      "27017"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-109",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-109",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 109,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "119",
                      "137",
                      "138",
                      "139",
                      "161",
                      "162",
                      "389",
                      "636",
                      "2049",
                      "2301",
                      "2381",
                      "3268",
                      "5800",
                      "5900"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-104",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-104",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetSaw",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 104,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/virtualNetworks/vnet-hdi-0809/subnets/default"
                }
              ]
            }
          },
          {
            "name": "NRMS-3ammvlly5cgsyvnet-6379",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379",
            "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus2",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "85893a4b-a3d3-4d53-8bc5-af1af6dc1bc9",
              "securityRules": [
                {
                  "name": "NRMS-Rule-107",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-107",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 107,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "23",
                      "135",
                      "445",
                      "5985",
                      "5986"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-106",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-106",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 106,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "22",
                      "3389"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-104",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-104",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetSaw",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 104,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-101",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-101",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-109",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-109",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 109,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "119",
                      "137",
                      "138",
                      "139",
                      "161",
                      "162",
                      "389",
                      "636",
                      "2049",
                      "2301",
                      "2381",
                      "3268",
                      "5800",
                      "5900"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-108",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-108",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 108,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "13",
                      "17",
                      "19",
                      "53",
                      "69",
                      "111",
                      "123",
                      "512",
                      "514",
                      "593",
                      "873",
                      "1900",
                      "5353",
                      "11211"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-105",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-105",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 105,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "1433",
                      "1434",
                      "3306",
                      "4333",
                      "5432",
                      "6379",
                      "7000",
                      "7001",
                      "7199",
                      "9042",
                      "9160",
                      "9300",
                      "16379",
                      "26379",
                      "27017"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-103",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-103",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetPublic",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 103,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/virtualNetworks/vnet-6379/subnets/Default"
                }
              ]
            }
          },
          {
            "name": "NRMS-a4mwcm5uxdxl4vnet-8017",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017",
            "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus2",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "09a97d6c-aac9-41fe-b97b-c2e316761813",
              "securityRules": [
                {
                  "name": "NRMS-Rule-101",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-101",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-107",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-107",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 107,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "23",
                      "135",
                      "445",
                      "5985",
                      "5986"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-109",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-109",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 109,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "119",
                      "137",
                      "138",
                      "139",
                      "161",
                      "162",
                      "389",
                      "636",
                      "2049",
                      "2301",
                      "2381",
                      "3268",
                      "5800",
                      "5900"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-105",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-105",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 105,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "1433",
                      "1434",
                      "3306",
                      "4333",
                      "5432",
                      "6379",
                      "7000",
                      "7001",
                      "7199",
                      "9042",
                      "9160",
                      "9300",
                      "16379",
                      "26379",
                      "27017"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-106",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-106",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 106,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "22",
                      "3389"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-104",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-104",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetSaw",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 104,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-108",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-108",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 108,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "13",
                      "17",
                      "19",
                      "53",
                      "69",
                      "111",
                      "123",
                      "512",
                      "514",
                      "593",
                      "873",
                      "1900",
                      "5353",
                      "11211"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-103",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-103",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetPublic",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 103,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/virtualNetworks/vnet-8017/subnets/Default"
                }
              ]
            }
          },
          {
            "name": "NRMS-kbijcrymaw3z6vnet-5947",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947",
            "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus2",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "3f6bbd65-1b02-4e21-b2f4-ed8aa9ce1921",
              "securityRules": [],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/virtualNetworks/vnet-5947/subnets/default"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups/azsmnet7217?api-version=2018-11-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-0285f91d62a11599e0680bb2f0d05eee-78726346bdc70fdb-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7fd8a9f3300e9a835fa248bc04df18c8",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/a7157262-faa8-4f4a-8eda-ad24ddf9ecdf?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:37:12 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/a7157262-faa8-4f4a-8eda-ad24ddf9ecdf?api-version=2018-11-01",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "23e95440-6089-4443-b8d8-13ded631154c",
        "x-ms-client-request-id": "7fd8a9f3300e9a835fa248bc04df18c8",
        "x-ms-correlation-request-id": "aa8d4423-e6de-4d11-a10a-7a9c1734dd06",
        "x-ms-ratelimit-remaining-subscription-deletes": "14861",
        "x-ms-request-id": "a7157262-faa8-4f4a-8eda-ad24ddf9ecdf",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153713Z:aa8d4423-e6de-4d11-a10a-7a9c1734dd06"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/a7157262-faa8-4f4a-8eda-ad24ddf9ecdf?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-0285f91d62a11599e0680bb2f0d05eee-ebd30d58f2b9b29a-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "8e773b1f85d683585c87b9df03350570",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:13 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "46a8a253-88bf-46fb-9159-1dd088cfd7e4",
        "x-ms-client-request-id": "8e773b1f85d683585c87b9df03350570",
        "x-ms-correlation-request-id": "40276167-302f-4b58-ae13-b1974b36a3a2",
        "x-ms-ratelimit-remaining-subscription-reads": "10912",
        "x-ms-request-id": "12180462-d216-4729-be99-e8fe6fc5240a",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153713Z:40276167-302f-4b58-ae13-b1974b36a3a2"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6379/providers/Microsoft.Network/networkSecurityGroups?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-022e9f75ebe720bea1dc4a085297fb7d-18c0b72043f4c353-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "6f1702ee52f36d593e501b3de62404b7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "19",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:13 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a98c4ac2-faa7-4073-b375-f3602c9f00e2",
        "x-ms-client-request-id": "6f1702ee52f36d593e501b3de62404b7",
        "x-ms-correlation-request-id": "0b98f1e7-33b9-4fae-bf89-1ad8ad05199a",
        "x-ms-ratelimit-remaining-subscription-reads": "10911",
        "x-ms-request-id": "ef39d721-96e3-43b4-9b54-e35548a91bb9",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153714Z:0b98f1e7-33b9-4fae-bf89-1ad8ad05199a"
      },
      "ResponseBody": {
        "value": []
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "1541349529",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
